--- a/Portfolio/Pages/Fuente/Fuente.razor
+++ b/Portfolio/Pages/Fuente/Fuente.razor
@@ -26,7 +26,7 @@ else
 {
     <CadenaCodificada Fuente="@fuente"></CadenaCodificada>
 
-    <Histograma Letras="@fuente.Letras"></Histograma>
+    @*<Histograma Letras="@fuente.Letras"></Histograma>*@
 
     <Decodificador Fuente="@fuente"></Decodificador>
 
