--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -20,8 +20,8 @@
             </NavLink>
         </div>     
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ionosfera">
-                <span class="oi oi-plus" aria-hidden="true"></span> Datos Ionosfericos
+            <NavLink class="nav-link" href="simulador">
+                <span class="oi oi-plus" aria-hidden="true"></span> Simulador
             </NavLink>
         </div>
         @*        <div class="nav-item px-3">
