--- a/Portfolio/Pages/Simulador/Simulador.razor
+++ b/Portfolio/Pages/Simulador/Simulador.razor
@@ -61,14 +61,15 @@
             <div class="col-12 col-sm-4 p-1">
                 <div class="row" style="padding-left:15px; padding-right:15px;">
                     <div class="col contenedor_Tabla" style="height: 31rem">
-                        <RadzenHeading Size="H4" Text="Tabla Tiempos De Espera"></RadzenHeading>
-                        <div>
+                        <RadzenHeading Size="H3" Text="Tabla Tiempos De Espera"></RadzenHeading>
+                        <div class="d-flex align-items-center justify-content-center">
                             <RadzenButton Icon="arrow_left" Click="@(args => ChangeDate(-1))"
                                           Style="background-color: #1b6ec2;"></RadzenButton>
                             <RadzenDatePicker @bind-Value="selectedDate" DateFormat="dd/MM" Change="@(args => OnDateChanged(args))" Style="margin: 0 10px; text-align: center; justify-content:center" ReadOnly></RadzenDatePicker>
                             <RadzenButton Icon="arrow_right" Click="@(args => ChangeDate(1))"
                                           Style="background-color:#1b6ec2;"></RadzenButton>
                         </div>
+
                         @if (tiemposDeEsperaFiltrados != null && tiemposDeEsperaFiltrados.Any())
                         {
                             var hours = tiemposDeEsperaFiltrados.First().TiempoEspera.Keys.Select(k => k.Hour).Distinct().OrderBy(h => h);
