simplificacion de metodos de Fuente usando linq

--- a/Portfolio/Pages/Fuente/TablaLetras.razor
+++ b/Portfolio/Pages/Fuente/TablaLetras.razor
@@ -39,7 +39,7 @@
                 @item.Information.ToString("0.##") bit
                     </td>
                     <td>
-                @item.Codigo
+                @item.Code
                     </td>
                     <td>
                 @item.FrecuenciaDeAparicion
