--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -14,12 +14,12 @@
                 <span class="oi oi-list" aria-hidden="true"></span> Fuentes
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+@*        <div class="nav-item px-3">
             <NavLink class="nav-link" href="generador">
                 <span class="oi oi-plus" aria-hidden="true"></span> Numeros Aleatorios
             </NavLink>
         </div>     
-        <div class="nav-item px-3">
+*@        <div class="nav-item px-3">
             <NavLink class="nav-link" href="simulador">
                 <span class="oi oi-plus" aria-hidden="true"></span> Simulador
             </NavLink>
