--- a/Portfolio/Pages/Fuente/CadenaCodificada.razor
+++ b/Portfolio/Pages/Fuente/CadenaCodificada.razor
@@ -25,7 +25,7 @@
 
 @code {
     [Parameter]
-    public Models.Fuente fuente { get; set; }
+    public Model.Fuente fuente { get; set; }
 
 
     public async Task CopyToClipboard()
