--- a/Portfolio/Pages/Fuente/Decodificador.razor
+++ b/Portfolio/Pages/Fuente/Decodificador.razor
@@ -15,7 +15,7 @@
 
 @code {
     [Parameter]
-    public Models.Fuente fuente { get; set; }
+    public Model.Fuente fuente { get; set; }
     string Cadena { get; set; } = string.Empty;
     string CadenaDecodificada { get; set; } = string.Empty;
 
