--- a/Portfolio/Pages/Fuente/Histograma.razor
+++ b/Portfolio/Pages/Fuente/Histograma.razor
@@ -1,5 +1,5 @@
 ﻿@using System.Globalization
-@using Models;
+@using Model;
 
 <RadzenCard class="rz-background-color-info-lighter" Style="margin-top:10px">
 <div class="container">
@@ -22,7 +22,7 @@
                     <RadzenAxisTitle Text="Frecuencia" />
                 </RadzenValueAxis>
             </RadzenChart>
-@*            <h4>Custom size column series</h4>
+            @*<h4>Custom size column series</h4>
             <RadzenChart>
                 <RadzenColumnSeries Data="@Data" CategoryProperty="Simbolo" Title="2020" LineType="LineType.Dashed" ValueProperty="Frecuencia">
                     <RadzenSeriesDataLabels Visible="@showDataLabels" />
