--- a/Portfolio/Pages/Index.razor
+++ b/Portfolio/Pages/Index.razor
@@ -1,4 +1,4 @@
 ﻿@page "/"
-
-<Portfolio.Pages.About.AboutMe></Portfolio.Pages.About.AboutMe>
+<Education></Education>
+<AboutMe ProfessionalId="1"></AboutMe>
 <h1>Seleccione una opcion del menu lateral</h1>
