--- a/Portfolio/Pages/Index.razor
+++ b/Portfolio/Pages/Index.razor
@@ -1,4 +1,4 @@
 ﻿@page "/"
-<Education></Education>
+@*<Education></Education>*@
 <AboutMe ProfessionalId="1"></AboutMe>
 <h1>Seleccione una opcion del menu lateral</h1>
