--- a/Portfolio/Pages/About/TitleComponent.razor
+++ b/Portfolio/Pages/About/TitleComponent.razor
@@ -1,6 +1,6 @@
-﻿<h3>@Title.ToUpper()</h3>
+﻿<h3 class="title-container">@Title.ToUpper()</h3>
 
 @code {
     [Parameter]
-    public string Title { get; set; } 
+    public string Title { get; set; }
 }
