--- a/Portfolio/Pages/About/AdditionalInfo.razor
+++ b/Portfolio/Pages/About/AdditionalInfo.razor
@@ -1,3 +1,26 @@
-﻿<div class="additional">
-    <!-- Representación de la información adicional -->
+﻿@using Model;
+@inject IProfessionalService service
+@using Services;
+
+<div class="additional">
+    <TitleComponent Title="Additional"></TitleComponent>
+    @foreach (var detail in _details)
+    {
+        <div>
+            <span class="item-icon"></span>
+            <span>@detail.Value</span>
+        </div>
+    }
 </div>
+
+@code {
+    [Parameter]
+    public int ProfessionalId { get; set; }
+    private List<Detail>? _details;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _details = await service.GetAdditionalInfoFromProfessionalAsync(ProfessionalId);
+        await base.OnParametersSetAsync();
+    }
+}
