--- a/Portfolio/Pages/About/TitleComponent.razor.css
+++ b/Portfolio/Pages/About/TitleComponent.razor.css
@@ -1,1 +1,11 @@
-﻿
+﻿.title-container {
+    background-color: #889;
+    width: calc(100% - 20px); /* Ocupa el ancho del contenedor menos 20px */
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    color: #fff;
+    letter-spacing: 0.3em;
+    font-size: 1.5em;
+    padding: 0.2em 0;
+    white-space: nowrap; /* Evita que el título se divida en dos líneas */
+}
