EF services working and viusal changes

--- a/Portfolio/Pages/About/AboutMe.razor
+++ b/Portfolio/Pages/About/AboutMe.razor
@@ -6,7 +6,7 @@
 @if (professional == null)
 {
     <h1>
-        "No se pudo cargar el profesional";
+        "No se pudo cargar el profesional: @ProfessionalId";
     </h1>
 }
 else
