--- a/Portfolio/Pages/About/Trainings.razor
+++ b/Portfolio/Pages/About/Trainings.razor
@@ -8,7 +8,7 @@
     {
         <div>
             <span class="training-icon"></span>
-            <span>@training.Accademy</span>
+            <h3>@training.Accademy</h3>
         </div>
         <div>
             @training.YearStart - @(training.YearFinish.HasValue ? training.YearFinish.Value.ToString() : "Present")
