--- a/Portfolio/Shared/MainLayout.razor
+++ b/Portfolio/Shared/MainLayout.razor
@@ -7,9 +7,8 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://www.linkedin.com/in/martinlopezrubio" target="_blank">About</a>
+            @*<a href="https://www.linkedin.com/in/martinlopezrubio" target="_blank">LinkedIn</a>*@
         </div>
-
         <article class="content px-4">
             @Body
         </article>
