--- a/Portfolio/Pages/About/Experiences.razor
+++ b/Portfolio/Pages/About/Experiences.razor
@@ -6,16 +6,16 @@
     <TitleComponent Title="Experience"></TitleComponent>
     @foreach (var experience in _experiences.OrderByDescending(e => e.YearStart))
     {
-        <div>
+        <h3>
             <span class="experience-icon"></span>
             <span>@experience.Name.ToUpper()</span>
-        </div>
-        <div>
+        </h3>
+        <h3>
             @experience.YearStart - @(experience.YearFinish.HasValue ? experience.YearFinish.Value.ToString() : "Present")
-        </div>
+        </h3>
         <div>@experience.Role</div>
         <div>
-            @foreach (var skill in _skills.Where(s => s.ExperinceId == experience.Id))
+            @foreach (var skill in _skills.Where(s => s.ExperienceId == experience.Id))
             {
                 <div>
                     <span class="skill-icon"></span>
