--- a/Portfolio/Pages/About/ProfileHeader.razor
+++ b/Portfolio/Pages/About/ProfileHeader.razor
@@ -1,5 +1,4 @@
 ﻿<div class="header">
-    <div class="photo"></div>
     <div class="title">
         <h1 class="title-style">
             @foreach (var part in Role?.ToUpper().Split('/') ?? Array.Empty<string>())
@@ -13,6 +12,9 @@
             }
         </h1>
         <h3 class="title-style">@Name</h3>
+    </div>
+    <div class="badge-container badge-base LI-profile-badge" data-locale="es_ES" data-size="medium" data-theme="light"
+         data-type="HORIZONTAL" data-vanity="martinlopezrubio" data-version="v1">
     </div>
 </div>
 
