--- a/Portfolio/Pages/About/ProfessionalProfileContainer.razor
+++ b/Portfolio/Pages/About/ProfessionalProfileContainer.razor
@@ -22,7 +22,7 @@
 
 @code {
     [Parameter]
-    public string ProfessionalProfile { get; set; }
+    public string? ProfessionalProfile { get; set; }
     [Parameter]
-    public List<Tool> Tools { get; set; }
+    public List<Tool>? Tools { get; set; }
 }
