--- a/Portfolio/Pages/Fuente/CadenaCodificada.razor
+++ b/Portfolio/Pages/Fuente/CadenaCodificada.razor
@@ -1,4 +1,4 @@
-﻿@inject IJSRuntime _jsInterop
+@inject IJSRuntime _jsInterop
 @inject NotificationService NotificationService
 <RadzenCard class="rz-background-color-info-lighter" Style="margin-top:10px">
 
