--- a/Portfolio/Pages/Fuente/Decodificador.razor
+++ b/Portfolio/Pages/Fuente/Decodificador.razor
@@ -1,4 +1,4 @@
-﻿<RadzenCard class="rz-background-color-info-lighter" Style="margin-top:10px">
+<RadzenCard class="rz-background-color-info-lighter" Style="margin-top:10px">
 
 
 <div id="Decodificador">
