--- a/Portfolio/Pages/Fuente/Histograma.razor
+++ b/Portfolio/Pages/Fuente/Histograma.razor
@@ -1,4 +1,4 @@
-﻿@using System.Globalization
+@using System.Globalization
 @using Model;
 
 <RadzenCard class="rz-background-color-info-lighter" Style="margin-top:10px">
