--- a/Portfolio/Pages/About/ProfessionalProfileContainer.razor.css
+++ b/Portfolio/Pages/About/ProfessionalProfileContainer.razor.css
@@ -1,9 +1,10 @@
 ﻿.section {
     display: flex;
+    flex-wrap: wrap; /* Permite envolver en pantallas pequeñas */
 }
 
 .professional-profile {
-    flex: 65%; /* Aumentamos el ancho para dar más espacio al título */
+    flex: 65%;
     display: flex;
     flex-direction: column;
 }
@@ -11,12 +12,13 @@
 .tools {
     flex: 35%;
     display: flex;
-    flex-direction: column; /* Organiza el título y el contenido en una columna */
+    flex-direction: column;
 }
 
 .tool-logos {
-    display: flex; /* Organiza los logotipos de las herramientas en una fila */
+    display: flex;
     justify-content: space-around;
+    flex-wrap: wrap; /* Acomoda los logos en pantallas pequeñas */
 }
 
 .tool-logo {
@@ -25,11 +27,18 @@
     flex-direction: column;
     align-items: center;
 }
+
 .professional-content {
-    margin-right: 30px; /* Margen derecho de 30px */
+    margin-right: 30px;
 }
 
 .logo {
-    width: 60px;
+    max-width: 60px; /* Asegura que las imágenes no superen el ancho */
     height: auto;
+}
+
+@media only screen and (max-width: 768px) {
+    .professional-profile, .tools {
+        flex: 100%; /* En pantallas pequeñas, los elementos ocupan todo el ancho */
+    }
 }
