--- a/Portfolio/Pages/About/ProfileHeader.razor
+++ b/Portfolio/Pages/About/ProfileHeader.razor
@@ -3,11 +3,10 @@
         <h1 class="title-style">
             @foreach (var part in Role?.ToUpper().Split('/') ?? Array.Empty<string>())
             {
-                @part
+                <span class="role-part">@part</span>
                 if (part != Role?.ToUpper().Split('/').Last())
                 {
-                    <text> / </text>
-                    <br />
+                    <span class="separator">/</span>
                 }
             }
         </h1>
