--- a/Portfolio/Pages/About/TitleComponent.razor.css
+++ b/Portfolio/Pages/About/TitleComponent.razor.css
@@ -1,11 +1,13 @@
 ﻿.title-container {
     background-color: #889;
-    width: calc(100% - 20px); /* Ocupa el ancho del contenedor menos 20px */
+    width: calc(100% - 20px);
     text-align: center;
     font-family: 'Lato', sans-serif;
     color: #fff;
     letter-spacing: 0.3em;
-    font-size: 1.5em;
-    padding: 0.2em 0;
-    white-space: nowrap; /* Evita que el título se divida en dos líneas */
+    font-size: 1.4em; /* Reducir el tamaño de la fuente un poco */
+    padding: 0.2em 10px; /* Añadir padding horizontal */
+    white-space: nowrap;
+    overflow: hidden; /* En caso de que aún exista desbordamiento, esto lo ocultará */
+    text-overflow: ellipsis; /* Esto agregará puntos suspensivos si el texto se desborda */
 }
