--- a/Portfolio/Pages/Fuente/ManualFuentesComponent.razor
+++ b/Portfolio/Pages/Fuente/ManualFuentesComponent.razor
@@ -1,4 +1,4 @@
-﻿<!-- Button trigger modal -->
+<!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" style="width:100px; float:right; margin-bottom:10px;">
         Manual
     </button>
