--- a/Portfolio/Pages/Simulador/Simulador.razor
+++ b/Portfolio/Pages/Simulador/Simulador.razor
@@ -130,7 +130,7 @@
                         <div class="col">
                             <div class="image-container">
                                 @*<img style="width:380px;height:420px; border-radius:20px;" src="Images/ImagenMapa.jpg" alt="mapa">*@
-                                <img class="img-fluid rounded-20" src="Images/ImagenMapa.jpg" alt="mapa">
+                                <img class="img-fluid rounded-20" src="Images/ImagenMapa.webp" alt="mapa">
                                 @if (TiemposDeEspera.Count() != 0)
                                 {
                                     <div class="comment-bubble comment-MF">
